--- a/test.html
+++ b/test.html
@@ -149,7 +149,17 @@
         </div>
      </div>
     
-
+<!-- форма отправки -->
+    
+  <form name="request" action="#">
+           <input type="text" name="name" placeholder="Ваше имя (обязательно)">
+           <input type="tel" name="tel" placeholder="Ваш телефон (обязательно)">
+           <input type="text" name="doman" placeholder="Адрес сайта">
+           <input type="email" name="email" placeholder="Ваш e-mail">
+           <input type="submit" value="Отправить заявку">
+       </form>
+       <span class="italic"></span>
+    </div>
 
 </body>
 </html>
