--- a/test.html
+++ b/test.html
@@ -151,7 +151,7 @@
     
 <!-- форма отправки -->
     
-  <form name="request" action="#">
+  <form name="request" action="#" Верстка блока #456Feedback - форма обратной связи>
            <input type="text" name="name" placeholder="Ваше имя (обязательно)">
            <input type="tel" name="tel" placeholder="Ваш телефон (обязательно)">
            <input type="text" name="doman" placeholder="Адрес сайта">
