--- a/test.html
+++ b/test.html
@@ -149,9 +149,9 @@
         </div>
      </div>
     
-<!-- форма отправки -->
+<!-- форма отправки Верстка блока #456Feedback - форма обратной связи-->
     
-  <form name="request" action="#" Верстка блока #456Feedback - форма обратной связи>
+  <form name="request" action="#" >
            <input type="text" name="name" placeholder="Ваше имя (обязательно)">
            <input type="tel" name="tel" placeholder="Ваш телефон (обязательно)">
            <input type="text" name="doman" placeholder="Адрес сайта">
